Fixed visual layout in RU.json
Signed-off-by: nikitareshetnik <reshetnik.nikita@gmail.com>

--- a/src/renderer/modules/KeyPickerKeyboard/languages/ru/RU.json
+++ b/src/renderer/modules/KeyPickerKeyboard/languages/ru/RU.json
@@ -20,17 +20,17 @@
   {"id":85,"x":975,"y":38,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"block","first":"*","second":"","third":"","fourth":""}},
   {"id":86,"x":1024,"y":38,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"block","first":"-","second":"","third":"","fourth":""}},
 
-  {"id":53,"x":0,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"`","second":"Ё","third":"","fourth":""}},
-  {"id":30,"x":49,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"1","second":"!","third":"","fourth":""}},
-  {"id":31,"x":98,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"2","second":"\"","third":"","fourth":""}},
-  {"id":32,"x":147,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"3","second":"№","third":"","fourth":""}},
-  {"id":33,"x":196,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"4","second":";","third":"","fourth":""}},
-  {"id":34,"x":245,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"5","second":"%","third":"","fourth":""}},
-  {"id":35,"x":294,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"6","second":":","third":"","fourth":""}},
-  {"id":36,"x":343,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"7","second":"?","third":"","fourth":""}},
-  {"id":37,"x":392,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"8","second":"*","third":"","fourth":""}},
-  {"id":38,"x":441,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"9","second":"(","third":"","fourth":""}},
-  {"id":39,"x":490,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"0","second":")","third":"","fourth":""}},
+  {"id":53,"x":0,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"`","second":"~","third":"Ё","fourth":""}},
+  {"id":30,"x":49,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"1","second":"!","third":"","fourth":""}},
+  {"id":31,"x":98,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"2","second":"@","third":"","fourth":"\""}},
+  {"id":32,"x":147,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"3","second":"#","third":"","fourth":"№"}},
+  {"id":33,"x":196,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"4","second":"$","third":"","fourth":";"}},
+  {"id":34,"x":245,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"5","second":"%","third":"","fourth":""}},
+  {"id":35,"x":294,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"6","second":"^","third":"","fourth":":"}},
+  {"id":36,"x":343,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"7","second":"&","third":"","fourth":"?"}},
+  {"id":37,"x":392,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"8","second":"*","third":"","fourth":""}},
+  {"id":38,"x":441,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"9","second":"(","third":"","fourth":""}},
+  {"id":39,"x":490,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"0","second":")","third":"","fourth":""}},
   {"id":45,"x":539,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"-","second":"_","third":"","fourth":""}},
   {"id":46,"x":588,"y":38,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"=","second":"+","third":"","fourth":""}},
   {"id":42,"x":637,"y":38,"centered":true,"icon":true,"iconsize":16,"iconx":655,"icony":40,"idArray":"","iconname":"Backspace","content":{"type":"1U2","first":"","second":"","third":"","fourth":""}},
@@ -44,36 +44,36 @@
   {"id":87,"x":1024,"y":73,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"longBlock","first":"+","second":"","third":"","fourth":""}},
 
   {"id":43,"x":0,"y":73,"centered":true,"icon":true,"iconsize":15,"iconx":21,"icony":75,"idArray":"","iconname":"Tab","content":{"type":"1U2","first":"","second":"","third":"","fourth":""}},
-  {"id":20,"x":62,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"Q","second":"Й","third":"","fourth":""}},
-  {"id":26,"x":111,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"W","second":"Ц","third":"","fourth":""}},
-  {"id":8,"x":160,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"E","second":"У","third":"","fourth":""}},
-  {"id":21,"x":209,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"R","second":"К","third":"","fourth":""}},
-  {"id":23,"x":258,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"T","second":"Е","third":"","fourth":""}},
-  {"id":28,"x":307,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"Y","second":"Н","third":"","fourth":""}},
-  {"id":24,"x":356,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"U","second":"Г","third":"","fourth":""}},
-  {"id":12,"x":405,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"I","second":"Ш","third":"","fourth":""}},
-  {"id":18,"x":454,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"O","second":"Щ","third":"","fourth":""}},
-  {"id":19,"x":503,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"P","second":"З","third":"","fourth":""}},
-  {"id":47,"x":552,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"[","second":"Х","third":"","fourth":""}},
-  {"id":48,"x":601,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"]","second":"Ъ","third":"","fourth":""}},
-  {"id":49,"x":650,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"\\","second":"/","third":"","fourth":""}},
+  {"id":20,"x":62,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"Q","third":"Й","fourth":""}},
+  {"id":26,"x":111,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"W","third":"Ц","fourth":""}},
+  {"id":8,"x":160,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"E","third":"У","fourth":""}},
+  {"id":21,"x":209,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"R","third":"К","fourth":""}},
+  {"id":23,"x":258,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"T","third":"Е","fourth":""}},
+  {"id":28,"x":307,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"Y","third":"Н","fourth":""}},
+  {"id":24,"x":356,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"U","third":"Г","fourth":""}},
+  {"id":12,"x":405,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"I","third":"Ш","fourth":""}},
+  {"id":18,"x":454,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"O","third":"Щ","fourth":""}},
+  {"id":19,"x":503,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"P","third":"З","fourth":""}},
+  {"id":47,"x":552,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"[","second":"{","third":"Х","fourth":""}},
+  {"id":48,"x":601,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"]","second":"}","third":"Ъ","fourth":""}},
+  {"id":49,"x":650,"y":73,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"\\","second":"|","third":"","fourth":"/"}},
 
   {"id":76,"x":715,"y":108,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"specialBlock","first":"Del","second":"","third":"","fourth":""}},
   {"id":77,"x":765,"y":108,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"specialBlock","first":"End","second":"","third":"","fourth":""}},
   {"id":78,"x":814,"y":108,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"specialBlock","first":"Page","second":"Dwn","third":"","fourth":""}},
 
   {"id":57,"x":0,"y":108,"centered":true,"icon":true,"iconsize":22,"iconx":22,"icony":105,"idArray":"","iconname":"CapsLock","content":{"type":"1U5","first":"","second":"","third":"","fourth":""}},
-  {"id":4,"x":70,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"A","second":"Ф","third":"","fourth":""}},
-  {"id":22,"x":119,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"S","second":"Ы","third":"","fourth":""}},
-  {"id":7,"x":168,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"D","second":"В","third":"","fourth":""}},
-  {"id":9,"x":218,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"F","second":"А","third":"","fourth":""}},
-  {"id":10,"x":267,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"G","second":"П","third":"","fourth":""}},
-  {"id":11,"x":316,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"H","second":"Р","third":"","fourth":""}},
-  {"id":13,"x":366,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"J","second":"О","third":"","fourth":""}},
-  {"id":14,"x":414,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"K","second":"Л","third":"","fourth":""}},
-  {"id":15,"x":464,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"L","second":"Д","third":"","fourth":""}},
-  {"id":51,"x":514,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":";","second":"Ж","third":"","fourth":""}},
-  {"id":52,"x":563,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"'","second":"Э","third":"","fourth":""}},
+  {"id":4,"x":70,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"A","third":"Ф","fourth":""}},
+  {"id":22,"x":119,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"S","third":"Ы","fourth":""}},
+  {"id":7,"x":168,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"D","third":"В","fourth":""}},
+  {"id":9,"x":218,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"F","third":"А","fourth":""}},
+  {"id":10,"x":267,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"G","third":"П","fourth":""}},
+  {"id":11,"x":316,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"H","third":"Р","fourth":""}},
+  {"id":13,"x":366,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"J","third":"О","fourth":""}},
+  {"id":14,"x":414,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"K","third":"Л","fourth":""}},
+  {"id":15,"x":464,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"L","third":"Д","fourth":""}},
+  {"id":51,"x":514,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":";","second":":","third":"Ж","fourth":""}},
+  {"id":52,"x":563,"y":108,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"'","second":"\"","third":"Э","fourth":""}},
   {"id":40,"x":612,"y":108,"centered":true,"icon":true,"iconsize":20,"iconx":640,"icony":106,"idArray":"","iconname":"Enter","content":{"type":"1U6","first":"","second":"","third":"","fourth":""}},
 
   {"id":92,"x":877,"y":108,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"block","first":"4","second":"←","third":"","fourth":""}},
@@ -81,16 +81,16 @@
   {"id":94,"x":975,"y":108,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"block","first":"6","second":"→","third":"","fourth":""}},
 
   {"id":225,"x":0,"y":143,"centered":true,"icon":true,"iconsize":18,"iconx":42,"icony":142,"idArray":"","iconname":"Shift","content":{"type":"1U8","first":"","second":"","third":"","fourth":""},"mod":true},
-  {"id":29,"x":103,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"Z","second":"Я","third":"","fourth":""}},
-  {"id":27,"x":152,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"X","second":"Ч","third":"","fourth":""}},
-  {"id":6,"x":201,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"C","second":"С","third":"","fourth":""}},
-  {"id":25,"x":250,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"V","second":"М","third":"","fourth":""}},
-  {"id":5,"x":300,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"B","second":"И","third":"","fourth":""}},
-  {"id":17,"x":349,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"N","second":"Т","third":"","fourth":""}},
-  {"id":16,"x":397,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"M","second":"Ь","third":"","fourth":""}},
-  {"id":54,"x":446,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":",","second":"Б","third":"","fourth":""}},
-  {"id":55,"x":495,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":".","second":"Ю","third":"","fourth":""}},
-  {"id":56,"x":544,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1U","first":"/","second":".","third":"","fourth":""}},
+  {"id":29,"x":103,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"Z","third":"Я","fourth":""}},
+  {"id":27,"x":152,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"X","third":"Ч","fourth":""}},
+  {"id":6,"x":201,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"C","third":"С","fourth":""}},
+  {"id":25,"x":250,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"V","third":"М","fourth":""}},
+  {"id":5,"x":300,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"B","third":"И","fourth":""}},
+  {"id":17,"x":349,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"N","third":"Т","fourth":""}},
+  {"id":16,"x":397,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"","second":"M","third":"Ь","fourth":""}},
+  {"id":54,"x":446,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":",","second":"<","third":"Б","fourth":""}},
+  {"id":55,"x":495,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":".","second":">","third":"Ю","fourth":""}},
+  {"id":56,"x":544,"y":143,"centered":false,"icon":false,"idArray":"","iconname":"","content":{"type":"1US","first":"/","second":"?","third":".","fourth":","}},
   {"id":229,"x":593,"y":143,"centered":true,"icon":true,"iconsize":18,"iconx":632,"icony":142,"idArray":"","iconname":"Shift","content":{"type":"2U","first":"","second":"","third":"","fourth":""},"mod":true},
 
   {"id":82,"x":765,"y":143,"centered":true,"icon":true,"idArray":"","iconname":"ArrUp","content":{"type":"specialBlock","first":"","second":"","third":"","fourth":""}},
@@ -103,13 +103,13 @@
   {"id":227,"x":59,"y":178,"centered":true,"icon":true,"idArray":"","iconname":"Win","content":{"type":"2U2","first":"","second":"","third":"","fourth":""},"mod":true,"tap":true},
   {"id":226,"x":118,"y":178,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"2U2","first":"Alt","second":"","third":"","fourth":""},"mod":true},
   {"id":44,"x":177,"y":178,"centered":true,"icon":true,"iconsize":20,"iconx":310,"icony":177,"idArray":"","iconname":"Space","content":{"type":"6U2","first":"","second":"","third":"","fourth":""}},
-  {"id":230,"x":463,"y":178,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"2U2","first":"AltGr","second":"","third":"","fourth":""},"mod":true},
+  {"id":230,"x":463,"y":178,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"2U2","first":"Alt","second":"","third":"","fourth":""},"mod":true},
   {"id":231,"x":522,"y":178,"centered":true,"icon":true,"idArray":"","iconname":"Win","content":{"type":"2U2","first":"","second":"","third":"","fourth":""},"mod":true,"tap":true},
   {"id":101,"x":581,"y":178,"centered":true,"icon":true,"iconsize":19,"iconx":587,"icony":177,"idArray":"","iconname":"App","content":{"type":"2U2","first":"","second":"","third":"","fourth":""}},
   {"id":228,"x":640,"y":178,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"2U2","first":"Ctrl","second":"","third":"","fourth":""},"mod":true},
 
   {"id":80,"x":715,"y":178,"centered":true,"icon":true,"idArray":"","iconname":"ArrLeft","content":{"type":"specialBlock","first":"","second":"","third":"","fourth":""}},
-  {"id":81,"x":765,"y":178,"centered":true,"icon":true,"idArray":"","iconname":"ArrDown","content":{"type":"specialBlock","first":"","second":"","third":"","fourth":""}},
+  {"id":81,"x":765,"y":178,"centered":true,"icon":true,"idArray":"","iconname":"ArrDwn","content":{"type":"specialBlock","first":"","second":"","third":"","fourth":""}},
   {"id":79,"x":814,"y":178,"centered":true,"icon":true,"idArray":"","iconname":"ArrRight","content":{"type":"specialBlock","first":"","second":"","third":"","fourth":""}},
   {"id":98,"x":877,"y":178,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"wideBlock","first":"0","second":"Ins","third":"","fourth":""}},
   {"id":99,"x":975,"y":178,"centered":true,"icon":false,"idArray":"","iconname":"","content":{"type":"block","first":".","second":"Del","third":"","fourth":""}},
